# sys_things

./: Cargo.toml  test.asm  test.c
src/: lib.rs  main.rs
src/account_info/: mod.rs  user.rs
src/file_info/: elf.rs  file.rs  lastlog.rs  mod.rs
src/modules/: autoruns.rs  file.rs  mod.rs  privilege.rs  process.rs  system.rs
src/network_info/: mod.rs  tcp.rs
src/process_info/: control.rs  info.rs  libhelper.rs  mod.rs  process.rs
src/system_info/: memory.rs  mod.rs  system.rs
src/utils/: cmd.rs  mod.rs  shellcode.rs
