[package]
name = "sys_things"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syscalls = { version = "0.5", default-features = false }
posix-acl = "1.1.0"
libc = "0.2"
chrono = "0.4"
base64 = "0.13.0"
byteorder = "1.4.3"
elf = "0.0.12"
sha2 = "0.10"
colored = "2.0.0"
indicatif = "0.17.1"
iced-x86 = "1.17.0"
bytes = "1.2.1"
regex = "1.7.0"
linefeed = "0.6.0"